# nikon_image_transfer_downloader

./: .env.example  .gitignore  README.md  pyproject.toml
specification/: specification.md
src/nikon_downloader/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  downloader.py  models.py  sync.py  ui.py
